test/e2e/fail_compile/type_errors/reference_struct_field_unsupported.cst
struct View {
    value: &num,
}

fn main() {}
